[FIX] sale: wrap long line in sale portal (backend)
From Sale create a new (or edit) SO. Add a note to the order with a long
line without dash or whitespace (i.e. a url). Save.

The table will adapt to display the long note on one line, shifting
right all the headers, creating an ugly and long overflow scrollbar.

Adding a "break-all" rule to mimic the behavior introduced in
a32aa05a6bc912d53e0bfe3ef0946009c2a28f2a

opw-2088589

closes odoo/odoo#40009

--- a/addons/account/static/src/scss/section_and_note_backend.scss
+++ b/addons/account/static/src/scss/section_and_note_backend.scss
@@ -16,3 +16,6 @@ table.o_section_and_note_list_view tr.o_data_row.o_is_line_section {
     border-top: 1px solid #BBB;
     border-bottom: 1px solid #BBB;
 }
+.o_sale_order table.o_section_and_note_list_view tr.o_data_row.o_is_line_note {
+    word-break: break-all;
+}
